# docs/swagger.json
@@ -13,7 +13,65 @@
     "host": "localhost:777",
     "basePath": "/v1",
     "paths": {
-        "/account": {
+        "/uploads/{fileName}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Retrieve a file by its path for the authenticated user",
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Get a file by path",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "File path (e.g., b60b4dd7-6dda-49fc-830f-020fa5fe4817.png)",
+                        "name": "fileName",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "File content",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid file path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Not authorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden or file not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/account": {
             "get": {
                 "security": [
                     {
@@ -154,7 +212,7 @@
                 }
             }
         },
-        "/account/photo": {
+        "/v1/account/photo": {
             "post": {
                 "security": [
                     {
@@ -212,7 +270,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/v1/auth/login": {
             "post": {
                 "description": "Login user, set token in cookie and return success: true",
                 "consumes": [
@@ -264,7 +322,7 @@
                 }
             }
         },
-        "/auth/register": {
+        "/v1/auth/register": {
             "post": {
                 "description": "Register a new user and return authentication token",
                 "consumes": [
@@ -303,64 +361,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/uploads/{fileName}": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Retrieve a file by its path for the authenticated user",
-                "produces": [
-                    "application/octet-stream"
-                ],
-                "tags": [
-                    "Account"
-                ],
-                "summary": "Get a file by path",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "File path (e.g., b60b4dd7-6dda-49fc-830f-020fa5fe4817.png)",
-                        "name": "fileName",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "File content",
-                        "schema": {
-                            "type": "file"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid file path",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "401": {
-                        "description": "Not authorized",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden or file not found",
                         "schema": {
                             "type": "string"
                         }
